--- a/LING_380_Preprocess.ipynb
+++ b/LING_380_Preprocess.ipynb
@@ -13,13 +13,29 @@
     "import os\n",
     "import math\n",
     "import re\n",
-    "import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cffe8f0c-6267-428b-a1dd-a0dcb8bca514",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define base_path\n",
+    "base_path = \"\"\n",
     "\n",
-    "drive.mount('/content/drive')\n",
-    "notebook_path = '/content/drive/My Drive/LING_380_project'\n",
-    "print(notebook_path)\n",
-    "for file in os.listdir(notebook_path):\n",
-    "  print(file)"
+    "# Path to word frequencies\n",
+    "freqs = pd.read_csv(os.path.join(base_path, \"freqs_coca.csv\"), header=0)\n",
+    "\n",
+    "# Path to GP and filler files containing surprisal data for each word\n",
+    "GP_base      = \"items_ClassicGP.ambig.csv.m\"\n",
+    "filler_base  = \"items_filler.ambig.csv.m\"\n",
+    "\n",
+    "# Path to filler and GP reading times\n",
+    "GP_RT_df     = pd.read_csv(os.path.join(base_path, \"ClassicGardenPathSet.csv\"), header=0)\n",
+    "filler_RT_df = pd.read_csv(os.path.join(base_path, \"Fillers.csv\"), header=0)"
    ]
   },
   {
@@ -51,26 +67,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path to GP and filler files containing surprisal data for each word\n",
-    "GP_base      = \"items_ClassicGP.ambig.csv.m\"\n",
-    "filler_base  = \"items_filler.ambig.csv.m\"\n",
-    "GP_paths     = [os.path.join(notebook_path, GP_base + str(n))  for n in range(4)]\n",
-    "filler_paths = [os.path.join(notebook_path, filler_base + str(n)) for n in range(4)]\n",
+    "####\n",
+    "\n",
+    "GP_paths     = [os.path.join(base_path, GP_base + str(n))  for n in range(4)]\n",
+    "filler_paths = [os.path.join(base_path, filler_base + str(n)) for n in range(4)]\n",
     "\n",
     "GP_surp_dfs     = [pd.read_csv(filepath, header=0) for filepath in GP_paths]\n",
     "filler_surp_dfs = [pd.read_csv(filepath, header=0) for filepath in filler_paths]\n",
     "\n",
     "for n in range(len(filler_surp_dfs)):\n",
     "  filler_surp_dfs[n]['model'] = 'm' + str(n)\n",
-    "  GP_surp_dfs[n]['model'] = 'm' + str(n)\n",
-    "\n",
-    "# Path to filler and GP reading times\n",
-    "GP_RT_df     = pd.read_csv(os.path.join(notebook_path, \"ClassicGardenPathSet.csv\"), header=0)\n",
-    "filler_RT_df = pd.read_csv(os.path.join(notebook_path, \"Fillers.csv\"), header=0)\n",
-    "\n",
-    "# Path to word frequencies\n",
-    "freqs = pd.read_csv(os.path.join(notebook_path, \"freqs_coca.csv\"), header=0)\n",
-    "\n"
+    "  GP_surp_dfs[n]['model'] = 'm' + str(n)"
    ]
   },
   {
@@ -184,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmerged_file = f\"{notebook_path}/fmerged_mod.csv\"\n",
+    "fmerged_file = f\"{base_path}/fmerged_mod.csv\"\n",
     "save_progbar(fmerged, fmerged_file)"
    ]
   },
@@ -195,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_file = f\"{notebook_path}/merged_mod.csv\"\n",
+    "merged_file = f\"{base_path}/merged_mod.csv\"\n",
     "save_progbar(merged, merged_file)"
    ]
   }
